@@ -3,34 +3,21 @@ Section: programming/control
 C-Name: forsquarefree
 Prototype: vV=GGI
 Help: forsquarefree(N=a,b,seq): the sequence is evaluated, N is of the form
- [n, factor(n)], n going through squarefree integers from a up to b;
- one must have a*b >= 0.
+ [n, factor(n)], n going through squarefree integers from a up to b.
 Doc: evaluates \var{seq}, where the formal variable $N$ is $[n,
  \kbd{factor}(n)]$ and $n$ goes through squarefree integers from $a$ to $b$;
- $a$ and $b$ must be integers of the same sign. Nothing is done if $a>b$.
+ $a$ and $b$ must be integers. Nothing is done if $a>b$.
 
  \bprog
- ? forsquarefree(N=2,10,print(N))
+ ? forsquarefree(N=-3,9,print(N))
+ [-2, [-1, 1; 2, 1]]
+ [-1, Mat([-1, 1])]
+ [1, matrix(0,2)]
  [2, Mat([2, 1])]
  [3, Mat([3, 1])]
  [5, Mat([5, 1])]
  [6, [2, 1; 3, 1]]
  [7, Mat([7, 1])]
- [10, [2, 1; 5, 1]]
-
- \\ negative numbers are allowed as well
- ? forsquarefree(N=-10,-3,print(N))
- [-10, [-1, 1; 2, 1; 5, 1]]
- [-7, [-1, 1; 7, 1]]
- [-6, [-1, 1; 2, 1; 3, 1]]
- [-5, [-1, 1; 5, 1]]
- [-3, [-1, 1; 3, 1]]
-
- \\ but not bounds of different signs
- ? forsquarefree(N=-3,3,print(N))
-  ***   at top-level: forsquarefree(N=-3,3,print(N))
-  ***                 ^------------------------------
-  *** forsquarefree: incorrect type in forsquarefree [!= signs] (t_VEC).
  @eprog
 
  This function is only implemented for $|a|, |b| < 2^{64}$ ($2^{32}$ on a 32-bit
