@@ -143,6 +143,14 @@
 [1, matrix(0,2)]
 [2, Mat([2, 1])]
 [0, Mat([0, 1])]
+[-5, [-1, 1; 5, 1]]
+[-3, [-1, 1; 3, 1]]
+[-2, [-1, 1; 2, 1]]
+[-1, Mat([-1, 1])]
+[1, matrix(0,2)]
+[2, Mat([2, 1])]
+[3, Mat([3, 1])]
+[5, Mat([5, 1])]
 [100001, [11, 1; 9091, 1]]
 [100002, [2, 1; 3, 1; 7, 1; 2381, 1]]
 [100003, Mat([100003, 1])]
@@ -159,4 +167,4 @@
 [-100001, [-1, 1; 11, 1; 9091, 1]]
 607926
 607926
-Total time spent: 2328
+Total time spent: 4807
