@@ -132,6 +132,7 @@ BA  18- qfbsolve now returns a vector of solutions.
     30- allow strsplit(str) [split into characters]
     31- allow strjoin(str) [default value for p = ""]
     32- allow listinsert(L, x, n) for n > #L, like listput
+    33- allow forsquarefree(n = a, b) with a*b < 0
 
   Added
      1- [libpari] nonsquare_Fl
